--- a/HTML-PC/home.html
+++ b/HTML-PC/home.html
@@ -284,9 +284,9 @@
 </section>
 
 <section class="section-home-2 clearfix mb80">
-    <div class="container">
+    <div class="container-left">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mb30">
                 <img src="images/graphics/img-about.png" alt="">
             </div>
             <div class="col-md-6 aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
